@@ -11,6 +11,8 @@ documents those changes that are of interest to users and administrators.
  -- Fix bug in task/affinity that could result in slurmd fatal error.
  -- Increase number of jobs that are tracked in the slurmd as finishing at one
     time.
+ -- Note when a job finishes in the slurmd to avoid a race when launching a
+    batch job takes longer than it takes to finish.
 
 * Changes in Slurm 17.02.4
 ==========================
